--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@glint/core": "^0.8.0",
+    "@glint/environment-ember-loose": "^0.8.0",
     "@nullvoxpopuli/eslint-configs": "2.2.5",
     "@types/babel__core": "^7.1.18",
     "@types/codemirror": "5.60.5",
@@ -107,6 +108,7 @@
     "execa": "^6.1.0",
     "file-loader": "^6.2.0",
     "fractal-page-object": "^0.3.0",
+    "glint-environment-ember-template-imports": "^0.0.4",
     "loader.js": "^4.7.0",
     "monaco-editor": "^0.33.0",
     "npm-run-all": "^4.1.5",
