--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,8 +46,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
-    "@glint/core": "^0.8.0",
-    "@glint/environment-ember-loose": "^0.8.0",
+    "@glint/core": "^0.8.2",
+    "@glint/environment-ember-loose": "^0.8.2",
     "@nullvoxpopuli/eslint-configs": "2.2.5",
     "@types/babel__core": "^7.1.18",
     "@types/codemirror": "5.60.5",
@@ -101,7 +101,8 @@
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
     "ember-source": "^4.4.0",
-    "ember-template-imports": "^2.0.1",
+    "ember-template-imports": "^3.0.0",
+    "ember-resources": "^4.4.0",
     "ember-template-lint": "^3.6.0",
     "esbuild-loader": "^2.18.0",
     "eslint": "^7.32.0",
