No TS story for non-default managers?

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,8 +46,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@glint/config": "^0.8.2",
     "@glint/core": "^0.8.2",
     "@glint/environment-ember-loose": "^0.8.2",
+    "@glint/environment-ember-template-imports": "^0.8.2",
     "@nullvoxpopuli/eslint-configs": "2.2.5",
     "@types/babel__core": "^7.1.18",
     "@types/codemirror": "5.60.5",
@@ -97,19 +99,19 @@
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^1.0.0",
+    "ember-modifier": "^3.2.7",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
+    "ember-resources": "^4.4.0",
     "ember-source": "^4.4.0",
     "ember-template-imports": "^3.0.0",
-    "ember-resources": "^4.4.0",
     "ember-template-lint": "^3.6.0",
     "esbuild-loader": "^2.18.0",
     "eslint": "^7.32.0",
     "execa": "^6.1.0",
     "file-loader": "^6.2.0",
     "fractal-page-object": "^0.3.0",
-    "glint-environment-ember-template-imports": "^0.0.4",
     "loader.js": "^4.7.0",
     "monaco-editor": "^0.33.0",
     "npm-run-all": "^4.1.5",
