--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,17 +39,17 @@
     "@codemirror/view": "0.19.47",
     "@ember/optional-features": "^2.0.0",
     "@ember/test-helpers": "^2.8.1",
-    "@embroider/compat": "^1.6.0",
-    "@embroider/core": "^1.6.0",
-    "@embroider/webpack": "^1.6.0",
+    "@embroider/compat": "^1.8.0",
+    "@embroider/core": "1.8.0",
+    "@embroider/webpack": "^1.8.0",
     "@fortawesome/ember-fontawesome": "^0.3.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
-    "@glint/config": "^0.8.2",
-    "@glint/core": "^0.8.2",
-    "@glint/environment-ember-loose": "^0.8.2",
-    "@glint/environment-ember-template-imports": "^0.8.2",
+    "@glint/config": "^0.8.3",
+    "@glint/core": "^0.8.3",
+    "@glint/environment-ember-loose": "^0.8.3",
+    "@glint/environment-ember-template-imports": "^0.8.3",
     "@nullvoxpopuli/eslint-configs": "2.2.5",
     "@types/babel__core": "^7.1.18",
     "@types/codemirror": "5.60.5",
@@ -138,7 +138,7 @@
   },
   "dependencies": {
     "@ember/test-waiters": "^3.0.2",
-    "@embroider/macros": "1.6.0",
+    "@embroider/macros": "1.8.0",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@nullvoxpopuli/horizon-theme": "*",
